--- a/src/main/resources/templates/error/4xx.html
+++ b/src/main/resources/templates/error/4xx.html
@@ -16,13 +16,12 @@
 
 
 		<div class="jumbotron">
-			<h1 class="display-4">Olá!</h1>
-			<p class="lead">Seu usuário não tem permissão para acessar está
-				pagina.</p>
+			<h1 class="display-4">Olá,</h1>
+			<p class="lead">Página informada através da URL não existe.</p>
 			<hr class="my-4">
 
 			<p class="lead">
-				<a type="button" class="btn btn-danger" th:href="@{/consultas}">Clique
+				<a type="button" class="btn btn-primary" th:href="@{/consultas}">Clique
 					aqui</a>
 			</p>
 		</div>
