--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -16,14 +16,12 @@
 
 
 		<div class="jumbotron">
-			<h1 class="display-4">Olá!</h1>
-			<p class="lead">Seu usuário não tem permissão para acessar está
-				pagina.</p>
+			<h1 class="display-4">Ops!</h1>
+			<p class="lead">Estamos atualizando nosso sistema, entre novamente mais tarde.</p>
 			<hr class="my-4">
 
 			<p class="lead">
-				<a type="button" class="btn btn-danger" th:href="@{/consultas}">Clique
-					aqui</a>
+				<a type="button" class="btn btn-primary" th:href="@{/consultas}">Ir para Consultas</a>
 			</p>
 		</div>
 
