--- a/src/main/resources/templates/consulta/detalhesConsulta.html
+++ b/src/main/resources/templates/consulta/detalhesConsulta.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Consulta +</a>
+		<a class="navbar-brand" href="/">Consulta +</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarNav" aria-controls="navbarNav"
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -22,10 +22,16 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active"><a class="nav-link"
+					th:href="@{/cadastrarConsulta}">Cadastrar Consulta <span
+						class="sr-only">(current)</span></a></li>
+						<li class="nav-item active"><a class="nav-link"
+					href="/cadastrar">Cadastrar usuário</a></li>
+					<li class="nav-item active"><a class="nav-link"
 					th:href="@{/consultas}">Listar Consultas <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Sair</a>
-				</li>
+				<li class="nav-item active" ><a
+					class="nav-link" href="/logout">Sair</a></li>
+				
+				
 
 			</ul>
 		</div>
@@ -107,6 +113,11 @@
 
 
 		</form>
+		
+		
+			
+		
+		<br/><br/>
 
 		<h2>Lista de Pacientes</h2>
 
