--- a/src/main/resources/templates/consulta/formConsulta.html
+++ b/src/main/resources/templates/consulta/formConsulta.html
@@ -28,11 +28,16 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link"
+				
+						<li class="nav-item active"><a class="nav-link"
+					href="/cadastrar">Cadastrar usuário</a></li>
+					<li class="nav-item active"><a class="nav-link"
 					th:href="@{/consultas}">Listar Consultas <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Sair</a>
-				</li>
+				<li class="nav-item active" ><a
+					class="nav-link" href="/logout">Sair</a></li>
+				
+				
 
 			</ul>
 		</div>
