--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
 
 <body>
 
+
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/">Consulta +</a>
@@ -26,8 +27,8 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" href="/login">Login</a></li>
-				
+			
+
 			</ul>
 		</div>
 	</nav>
@@ -35,7 +36,30 @@
 	<div class="container">
 		
 
-		index aqui
+ <!-- nomes vindo do web security -->
+	<form th:action="@{/appLogin}" method="POST">
+	
+				<div class="form-row">
+				
+				
+						<div class="form-group col-md-4">
+					    <label for="nome">Login</label> <input type="text"
+						class="form-control" name="app_nomeusuario"
+						placeholder="Informe o nome para login">
+				      </div>
+				      
+				      	<div class="form-group col-md-4">
+					    <label for="senha">Senha</label> <input type="password"
+						class="form-control" name="app_senha"
+						placeholder="Informe sua senha">
+				      </div>
+				
+				</div>
+				<button type="submit" class="btn btn-primary">Entrar</button>
+	
+	
+	</form>
+		
 		
 		
 	</div>
