--- a/src/main/resources/templates/usuario/listarUsuarios.html
+++ b/src/main/resources/templates/usuario/listarUsuarios.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-
 
 <head>
 <title>Consulta +</title>
 <meta charset="UTF-8">
 
 <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/css/bootstrap-datepicker.standalone.min.css}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
+
 
 <body>
 
@@ -29,60 +32,48 @@
 						class="sr-only">(current)</span></a></li>
 						<li class="nav-item active"><a class="nav-link"
 					href="/cadastrar">Cadastrar usuário</a></li>
+					<li class="nav-item active"><a class="nav-link"
+					th:href="@{/consultas}">Listar Consultas <span class="sr-only">(current)</span></a>
 				<li class="nav-item active" ><a
-					class="nav-link"  href="/logout">Sair</a></li>
+					class="nav-link" href="/logout">Sair</a></li>
 				
 				
 
 			</ul>
 		</div>
 	</nav>
-
 	<div class="container">
 	
-	<a href="/pdflistaconsultas" target="_blank"> Imprimir Consultas itext</a>
-	 </br>
-    <a href="/consultasPDF" target="_blank"> Imprimir Consultas java Script</a>
-    
-
-    
-		<table class="table table-striped">
+			<table class="table table-striped">
 
 			<thead>
 				<tr>
-					<th>Nome Médico</th>
-					<th>Especialidade</th>
-					<th>Horário</th>
-					<th>Data</th>
+					<th>Nome Completo</th>
+					<th>Login</th>
+					<th>Telefone</th>
 					<th>Opções</th>
 				<tr>
 			</thead>
 			<tbody>
-				<tr th:each="consulta : ${consultas}">
-					<td id="nome"><a
-						th:href="${(#mvc.url('CC#detalhesConsulta').arg(0, consulta.codigo)).build()}"><span
-							th:text="${consulta.nome_medico}"></span></a></td>
-					<td><span th:text="${consulta.especialidade}"></span></td>
-					<td><span th:text="${consulta.horario}"></span></td>
-					<td><span th:text="${{consulta.data}}"></span></td>
-					<td><a th:href="@{/edit/{codigo}(codigo=${consulta.codigo})}">Editar</a></td>
+				<tr th:each="usuario : ${usuariosListar}">
 					
+					<td><span th:text="${usuario.nome_completo}"></span></td>
+					<td><span th:text="${usuario.nome}"></span></td>
+				    <td><span th:text="${usuario.telefone}"></span></td>
 					<td><a type="button" class="btn btn-danger"
-						th:href="${(#mvc.url('CC#deletarConsulta').arg(0, consulta.codigo)).build()}">Deletar</a>
+						th:href="@{/delete/{id}(id=${usuario.id})}">Deletar</a>
 					</td>
-					
 				</tr>
 			</tbody>
 
 		</table>
-
+			
+			
 	</div>
-	
 	<script th:src="@{/js/bootstrap.js}"></script>
-	
-	
-	
-
+	<script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.min.js}"></script>
+	<script th:src="@{/js/bootstrap-datepicker.pt-BR.min.js}"></script>
 
 </body>
 
